--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "default",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": ">=4.3.2"
+  },
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server",
-    "start": "webpack-dev-server"
+    "bundle": "webpack -p --config webpack.config.js",
+    "start": "./node_modules/.bin/http-server src"
   },
   "repository": {
     "type": "git",
@@ -20,6 +24,10 @@
     "babel-preset-es2015": "^6.18.0",
     "tag-loader": "^0.3.0",
     "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.2",
+    "riot": "^3.0.2"
+  },
+  "dependencies": {
+    "http-server": "^0.9.0"
   }
 }
