--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server",
-    "bundle": "webpack -p --config webpack.config.js",
+    "dev": "webpack-dev-server --optimize-dedupe",
+    "bundle": "webpack --optimize-minimize --optimize-dedupe -p --config webpack.config.js",
     "start": "./node_modules/.bin/http-server src"
   },
   "repository": {
@@ -22,12 +22,14 @@
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
+    "riot": "^3.0.2",
     "tag-loader": "^0.3.0",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2",
-    "riot": "^3.0.2"
+    "webpack": "^2.1.1-beta",
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
-    "http-server": "^0.9.0"
+    "babel-runtime": "^6.20.0",
+    "http-server": "^0.9.0",
+    "webpack": "^2.1.1-beta"
   }
 }
