--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --optimize-dedupe",
-    "bundle": "webpack --optimize-minimize -p --config webpack.config.js",
+    "bundle": "webpack --optimize-minimize -p --config webpack.min.config.js",
     "start": "./node_modules/.bin/http-server src"
   },
   "repository": {
@@ -29,7 +29,10 @@
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
+    "chunk-manifest-webpack-plugin": "^1.0.0",
     "http-server": "^0.9.0",
-    "webpack": "^2.1.1-beta"
+    "webpack": "^2.1.1-beta",
+    "webpack-manifest-plugin": "^1.1.0",
+    "webpack-md5-hash": "0.0.5"
   }
 }
