--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --optimize-dedupe",
-    "bundle": "webpack --optimize-minimize -p --config webpack.min.config.js",
+    "bundle": "webpack --optimize-minimize --display-error-details -p --config webpack.min.config.js",
     "start": "./node_modules/.bin/http-server src"
   },
   "repository": {
@@ -30,7 +30,9 @@
   "dependencies": {
     "babel-runtime": "^6.20.0",
     "chunk-manifest-webpack-plugin": "^1.0.0",
+    "html-webpack-plugin": "^2.28.0",
     "http-server": "^0.9.0",
+    "jsonfile": "^2.4.0",
     "webpack": "^2.1.1-beta",
     "webpack-manifest-plugin": "^1.1.0",
     "webpack-md5-hash": "0.0.5"
